fix: styling overflow issue

--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,5 @@
-body{
-    width: 100%;
-}
-
 .parent-container{
     display: flex;
-    width: 100%;
 
     ul{
         list-style: none;
